# FastAPI_Intro-SQL

./: README.md  pyproject.toml
.github/workflows/: test_push.yaml
Bruno/SQL-Tarefas/: Adicionar tarefas.bru  Deleta tarefa.bru  Edita tarefa.bru  Retornar path.bru  bruno.json
app/: main.py
